# mosaic-ml

./: .bandit.yaml  .dockerignore  .gitignore  .readthedocs.yml  Dockerfile  README.md  analyze.py  conftest.py  corrupt_fits.py  corrupt_svm.py  data_prep.py  ensemble.py  evaluate.py  image_prep.py  import_hdf5.py  main.py  make_images.py  requirements.txt  runsvm.sh  setup.cfg  setup.py  tox.ini
.github/: ci_cron_weekly.yml
data/results/ensemble_svm/test/: plots
data/results/ensemble_svm/val/: scores
docker/: Dockerfile  build-image.sh  run-container.sh
mosaic-ml/: analyze.py  augment.py  corrupt.py  ensemble.py  filter_similarity.py  harvest.py  load_images.py  make_dataset.py  make_images.py  mosaic_predict.py  mosaic_train.py  runsvm.sh  svm-predict.sh  svm-synthesize.sh  svm-train.sh  train.py
mosaic-ml/data/: subsamples.txt  svm_train.csv
mosaic-ml/models/ensemble2/: keras_metadata.pb  saved_model.pb
mosaic-ml/models/ensemble2/variables/: variables.index
mosaic-ml/models/ensemble4d/: saved_model.pb
mosaic-ml/models/ensemble4d/variables/: variables.index
mosaic-ml/models/ensemble4d/weights/: ckpt.index
mosaic-ml/results/ensemble/: plots  predictions
mosaic-ml/results/ensemble/validation/: fnfp  history  plots  predictions  scores  test_idx
mosaic-ml/results/ensemble2/: scores  test_idx
mosaic-ml/results/ensemble2/validation/: predictions
mosaicML/: analyze.py  corrupt.py  ensemble.py  make_images.py  mosaic_predict.py  mosaic_train.py  svm-prep.sh  svm-train.sh
mosaicML/analysis/: eda.py
mosaicML/modeling/: ensemble.py  mosaic_predict.py  mosaic_train.py
mosaicML/models/ensemble2/weights/: ckpt.index
mosaicML/models/ensemble4d/: keras_metadata.pb
mosaicML/preprocessing/: augment.py  corrupt.py  harvest.py  load_images.py  make_dataset.py  make_images.py
mosaicML/results/ensemble/: fnfp  scores  test_idx
mosaicML/results/ensemble2/: fnfp  history  plots  predictions
mosaicML/results/ensemble2/validation/: fnfp  plots  scores
mosaicML/tests/: __init__.py  test_example.py
mosaic_ml/modeling/: ensemble.py  mosaic_predict.py  mosaic_train.py
mosaic_ml/preprocessing/: augment.py  corrupt.py  harvest.py  load_images.py  make_dataset.py  make_images.py
results/ensemble_svm/test/: predictions  scores
results/ensemble_svm/val/: plots  predictions
scripts/: build-image  config-offsite  run-container  run-container.sh  svm-predict.sh  svm-prep.sh  svm-synthesize.sh  svm-train.sh
tests/: __init__.py  test_example.py
