[metadata]
name = mosaic-ml
author = STScI
author_email = helpdesk@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = http://stsci.edu
description =  Machine Learning for Hubble Space Telescope Mosaic Alignment
long_description = file: README.md
edit_on_github = False
github_project = alphasentaurii/mosaic-ml

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    drizzlepac
    tensorflow
    progressbar
    tqdm


[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy
dev =
    black >=19.3b0, <20
    flake8
    pytest >=5.0.1, <6
    pytest-cov >= 2.7.1, <3
    pytest-profiling
    tox >=3.13.2, <4
    bandit

[options.package_data]
mosaic-ml = data/*

[tool:pytest]
testpaths = "mosaic-ml" "docs"
doctest_plus = enabled
text_file_format = md
addopts = --doctest-rst

[coverage:run]
omit =
    mosaic-ml/*setup_package*
    mosaic-ml/tests/*
    mosaic-ml/*/tests/*
    mosaic-ml/version*
    */mosaic-ml/*setup_package*
    */mosaic-ml/tests/*
    */mosaic-ml/*/tests/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg
