[metadata]
name = mosaic-ml
author = STScI (Ru Kein)
author_email = helpdesk@stsci.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/alphasentaurii/mosaic-ml
description =  Machine Learning Package for Hubble Space Telescope (HST) Mosaic Image Alignment
long_description = file: README.md
edit_on_github = False
github_project = alphasentaurii/mosaic-ml

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = 
    setuptools >=41.0.1
install_requires =
    astropy
    astroquery
    datetime
    drizzlepac
    matplotlib
    numpy
    pandas
    plotly
    progressbar
    stsci.tools
    sklearn
    tensorflow
    tqdm


[options.extras_require]
# test =
#     pytest-astropy
docs =
    sphinx-astropy
dev =
    black
    flake8
    pytest
    pytest-cov
    pytest-profiling
    tox
    bandit

[options.package_data]
mosaic-ml = data/*

[tool:pytest]
testpaths = mosaicML/tests
# doctest_plus = enabled
# text_file_format = md
# addopts = --doctest-rst

[coverage:run]
omit =
    mosaic-ml/*setup_package*
    mosaic-ml/tests/*
    mosaic-ml/*/tests/*
    mosaic-ml/version*
    */mosaic-ml/*setup_package*
    */mosaic-ml/tests/*
    */mosaic-ml/*/tests/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg
